--- a/lab01-intro/source/CMakeLists.txt
+++ b/lab01-intro/source/CMakeLists.txt
@@ -1,4 +1,5 @@
 set(SOURCE_LIST
     "${LAB01_SOURCE_ROOT}/SimpleGL.cpp"
     "${LAB01_SOURCE_ROOT}/SimpleGLScene.cpp"
+    "${LAB01_SOURCE_ROOT}/Triangle.cpp"
     PARENT_SCOPE)
