--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ include("${ANIM_ATLAS_CONFIG_ROOT}/Compiler.cmake")
 add_subdirectory("${ANIM_ATLAS_ROOT}")
 
 # Now add the lab subdirectories.
-add_subdirectory("${ANIM_SOURCE_DIR}/lab01-intro")
-add_subdirectory("${ANIM_SOURCE_DIR}/lab02-euler")
+#add_subdirectory("${ANIM_SOURCE_DIR}/lab01-intro")
+#add_subdirectory("${ANIM_SOURCE_DIR}/lab02-euler")
+add_subdirectory("${ANIM_SOURCE_DIR}/lab03-integration")
 
