Added Plane but when rendered causes globs to dissapear

--- a/Glob/include/CMakeLists.txt
+++ b/Glob/include/CMakeLists.txt
@@ -11,4 +11,8 @@ set(INCLUDE_LIST
 	"${GLOB_INCLUDE_ROOT}/SimpleMesh.h"
 	"${GLOB_INCLUDE_ROOT}/stdafx.h"
 	"${GLOB_INCLUDE_ROOT}/Glob.h"
+	"${GLOB_INCLUDE_ROOT}/Structure.h"
+	"${GLOB_INCLUDE_ROOT}/ShapeGenerator.h"
+	"${GLOB_INCLUDE_ROOT}/ShapeData.h"
+	"${GLOB_INCLUDE_ROOT}/Vertex.h"
     PARENT_SCOPE)
